<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/one_hundred_thirty_dp"
    android:layout_margin="3dp">
    <RelativeLayout
        style="@style/Layout.Click"
        android:padding="10dp"
        android:id="@+id/lay_click">
        <LinearLayout
            android:layout_marginStart="@dimen/ten_dp"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="@dimen/seventy_five_dp"
                android:layout_height="@dimen/seventy_five_dp"
                android:visibility="gone"
                android:id="@+id/team_home_bandage"
                android:contentDescription="@null" />
            <TextView
                style="@style/Text.Item.Match"
                android:visibility="gone"
                android:id="@+id/team_home_score"
                android:hint="@string/dash"/>
            <TextView
                style="@style/Text.Item.Match"
                android:textSize="@dimen/fifteen_sp"
                android:layout_marginTop="@dimen/five_dp"
                android:id="@+id/team_home_name"
                android:hint="@string/team_name" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true" >
            <TextView
                style="@style/Text.Item.Match"
                android:textSize="@dimen/fifteen_sp"
                android:id="@+id/match_date"
                android:hint="@string/match_date"/>
            <TextView
                style="@style/Text.Item.Match"
                android:textSize="@dimen/fifteen_sp"
                android:id="@+id/match_time"
                android:hint="@string/match_time"/>
            <TextView
                style="@style/Text.Item.Match"
                android:textSize="@dimen/fifteen_sp"
                android:id="@+id/match_status"
                android:text="@string/match_status"/>

        </LinearLayout>
        <LinearLayout
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/ten_dp"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            tools:ignore="UseCompoundDrawables">
            <TextView
                android:id="@+id/team_away_score"
                style="@style/Text.Item.Match"
                android:visibility="gone"
                android:hint="@string/dash"/>
            <ImageView
                android:layout_width="@dimen/seventy_five_dp"
                android:layout_height="@dimen/seventy_five_dp"
                android:id="@+id/team_away_bandage"
                android:visibility="gone"
                android:contentDescription="@null" />
            <TextView
                android:id="@+id/team_away_name"
                android:layout_marginTop="@dimen/five_dp"
                android:textSize="@dimen/fifteen_sp"
                style="@style/Text.Item.Match"
                android:hint="@string/team_name"/>
        </LinearLayout>
    </RelativeLayout>
</android.support.v7.widget.CardView>