<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:padding="@dimen/three_dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@color/light_gray">
        <TextView
            android:layout_margin="@dimen/ten_dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/prediction"/>
        <ImageView
            android:id="@+id/dialog_icon_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fifty_dp"
            android:background="@color/black_effective"
            android:contentDescription="@null" />
    </LinearLayout>

    <ScrollView
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_gray">

            <LinearLayout
                android:id="@+id/dialog_title_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    style="@style/Text.Item.Detail"
                    android:text="@string/title_home"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/thirty_sp"
                    android:textSize="@dimen/fifteen_sp" />
                <TextView
                    style="@style/Text.Item.Detail.Title"
                    android:text="@string/TEAM"
                    android:textStyle="bold" />
                <TextView
                    style="@style/Text.Item.Detail"
                    android:gravity="center"
                    android:text="@string/title_away"
                    android:layout_marginTop="@dimen/thirty_sp"
                    android:textSize="@dimen/fifteen_sp" />
            </LinearLayout>
            <View
                android:id="@+id/diver_title"
                style="@style/Divider"/>

            <LinearLayout
                android:id="@+id/dialog_formation_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/dialog_next_txt_home_formation"
                    style="@style/Text.Item.Detail"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/thirty_sp"
                    android:textSize="@dimen/fifteen_sp" />
                <TextView
                    style="@style/Text.Item.Detail.Title"
                    android:text="@string/formation_g"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/dialog_next_txt_away_formation"
                    style="@style/Text.Item.Detail"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/thirty_sp"
                    android:textSize="@dimen/fifteen_sp" />
            </LinearLayout>
            <View
                android:id="@+id/diver_formation"
                style="@style/Divider"/>

            <LinearLayout
                android:id="@+id/dialog_lineup_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <include layout="@layout/item_detail_lineup" />
                <View style="@style/Divider"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>